--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
         <pre id="output"></pre>
         </section>
     </div>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- brainfuck-visualizer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5587173855104127"
+     data-ad-slot="5617890391"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <section id="info">
         <h3>Quick Reference</h3>
 
