--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Brainfuck Visualizer</title>
     <link rel="stylesheet" href="css/screen.css" />
+    <meta name="google-site-verification" content="cWnIgnYJ9UyQZYimSJVqo9SaA1NUHKj-Zstn12W4KQA" />
     <script type="text/javascript" src="js/lib/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="js/lib/underscore-min.js"></script>
     <script type="text/javascript" src="js/lib/backbone-min.js"></script>
