Update meta description

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Brainfuck Visualizer</title>
+    <title>Brainfuck Compiler</title>
+    <meta name="description" content="Brainfuck Interpreter and Visualizer." />
     <link rel="stylesheet" href="css/screen.css" />
     <script type="text/javascript" src="js/lib/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="js/lib/underscore-min.js"></script>
@@ -11,7 +12,6 @@
     <script type="text/javascript" src="js/models.js"></script>
 </head>
 <body>
-
     <header>
 
     </header>
