--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- brainfuck-visualizer -->
-<ins class="adsbygoogle"
+<!--<ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5587173855104127"
      data-ad-slot="5617890391"
@@ -91,7 +91,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script>-->
     <section id="info">
         <h3>Quick Reference</h3>
 
