--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body>
 
     <header>
-
+<h3 style="
+    text-align: center;
+    margin-top: 3em;
+">Brainfuck Interpterer and Tape Visualizer</h3>
     </header>
 
     <div id="interpreter">
@@ -152,5 +155,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             }).render();
         });
     </script>
+<hr />
+Fatih Erikli, MIT Licensed, 2013
 </body>
 </html>
