--- a/index.html
+++ b/index.html
@@ -156,6 +156,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         });
     </script>
 <hr />
-Fatih Erikli, MIT Licensed, 2013
+	<a href="https://fatiherikli.github.io">Fatih Erikli</a>, MIT Licensed, 2013
 </body>
 </html>
