--- a/index.html
+++ b/index.html
@@ -85,18 +85,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <pre id="output"></pre>
         </section>
     </div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- brainfuck-visualizer -->
-<!--<ins class="adsbygoogle"
+	
+    <section id="info">
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- BrainfuckVisualizer -->
+<ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5587173855104127"
-     data-ad-slot="5617890391"
+     data-ad-slot="2160584705"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>-->
-    <section id="info">
+</script>
         <h3>Quick Reference</h3>
 
         <table>
