--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Brainfuck Visualizer</title>
+    <title>BF Visualizer</title>
     <link rel="stylesheet" href="css/screen.css" />
-    <meta name="google-site-verification" content="cWnIgnYJ9UyQZYimSJVqo9SaA1NUHKj-Zstn12W4KQA" />
     <script type="text/javascript" src="js/lib/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="js/lib/underscore-min.js"></script>
     <script type="text/javascript" src="js/lib/backbone-min.js"></script>
     <script type="text/javascript" src="js/interpreter.js"></script>
     <script type="text/javascript" src="js/views.js"></script>
     <script type="text/javascript" src="js/models.js"></script>
-    <script data-ad-client="ca-pub-5587173855104127" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P6KKLCD');</script>
-<!-- End Google Tag Manager -->
 </head>
 <body>
 
@@ -25,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <h3 style="
     text-align: center;
     margin-top: 3em;
-">Brainfuck Interpterer and Tape Visualizer</h3>
+">BF Interpreter and Tape Visualizer</h3>
     </header>
 
     <div id="interpreter">
@@ -126,11 +117,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </tr>
             <tr>
                 <td style="text-align:center"><code>!</code></td>
-		<td>if the exclaim box is checked, allows the interpreter to use all characters to the right of the <code>!</code> as program input.</td>
+		<td>if the exclaim (<code>!</code>) box is checked, allows the interpreter to use all characters to the right of the <code>!</code> as program input. For example, <code>,.!e</code> will print "e" as "e" is sent as standard input.</td>
             </tr>
             </tbody></table>
-
-        <p><a href="http://en.wikipedia.org/wiki/Brainfuck">http://en.wikipedia.org/wiki/Brainfuck</a></p>
 
 
     </section>
